Updated generate script, added favicons, updated resume.

--- a/content/resume.html
+++ b/content/resume.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8"/>
     <meta name="description" content="Olivia's Resume."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
+    <link rel="manifest" href="static/favicon/site.webmanifest">
     <link rel="stylesheet" type="text/css" href="/static/web.css" media="all"/>
     <link rel="stylesheet" type="text/css" href="/static/print.css" media="print"/>
     <link
@@ -21,15 +25,7 @@
         <h1>Olivia Martinez</h1>
         <h3>Fullstack Web Developer</h3>
         <div class="contacts">
-            <h4 id="number">714-332-9056</h4>
-            |
             <h4 id="email"><a href="mailto:ollycodes@pm.me">ollycodes@pm.me</a></h4>
-            |
-            <h4 id="github"><a
-                href="https://github.com/ollycodes"
-                target="_blank"
-                rel="noopener noreferrer">
-                github.com/ollycodes
             </a></h4>
         </div>
     </div>
